# cemoji

./: CMakeLists.txt
generator/: index.js  package-lock.json  package.json
generator/template/: c.hbs
src/: CMakeLists.txt  emoji.c  emoji.h  emoji_data.c  emoji_types.h  main.c
